Fix calculator mobile layout going out of screen

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -306,7 +306,7 @@ h3 {
 }
 @media (max-width: 1123px) {
   .container {
-    max-width: 120rem;
+    max-width: 98dvw;
   }
 }
 @media (max-width: 499px) {
